--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
     build:
       context: ./hi-climate-backend
       dockerfile: Dockerfile
+    ports:
+      - 8000:8000
+    volumes:
+      - ~/.config/gcloud/application_default_credentials.json:/root/.config/gcloud/application_default_credentials.json
     networks:
       - priv_net
 
