--- a/caddy/etc/Caddyfile
+++ b/caddy/etc/Caddyfile
@@ -3,10 +3,10 @@
 }
 
 localhost {
-	root * /usr/share/caddy
-	file_server
-	handle /chat/* {
-		reverse_proxy api:8000 {
+	reverse_proxy frontend:8001
+
+	handle /chat* {
+		reverse_proxy backend:8000 {
 			header_up X-Forwarded-Proto https
 		}
 	}
